fix: [CVS-9099]: Service name is overflowing in the Monitored Service list page

--- a/src/modules/85-cv/pages/monitored-service/CVMonitoredService/CVMonitoredService.module.scss
+++ b/src/modules/85-cv/pages/monitored-service/CVMonitoredService/CVMonitoredService.module.scss
@@ -4,7 +4,6 @@
  * that can be found in the licenses directory at the root of this repository, also available at
  * https://polyformproject.org/wp-content/uploads/2020/06/PolyForm-Shield-1.0.0.txt.
  */
-
 .healthScoreCardContainer {
   display: flex;
   justify-content: flex-start;
@@ -67,4 +66,9 @@ $headerHeight: 146px;
   width: 720px;
   height: 350px;
   margin-right: 40px;
+}
+.monitoredServiceName{
+  white-space: nowrap !important; 
+  overflow: hidden !important;
+  text-overflow: ellipsis !important;
 }
